--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "zeronet_protocol"]
 	path = zeronet_protocol
 	url = https://github.com/decentnetwork/zeronet_protocol.git
+[submodule "zerucontent"]
+	path = zerucontent
+	url = https://github.com/canewsin/zerucontent.git
+[submodule "json_filter_sorted"]
+	path = json_filter_sorted
+	url = https://github.com/canewsin/json_filter_sorted.git
