--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ edition = "2021"
 tokio = { version = "1.17.0", features = ["full"] }
 zeronet_cryptography = { path = "./zeronet_cryptography" }
 zeronet_protocol = { path = "./zeronet_protocol", features = ["tor", "i2p"] }
+zerucontent = { path = "./zerucontent"}
 futures = "0.3.5"
 sha2 = "0.10.2"
 serde = { version = "1.0.110", features = ["derive"] }
+serde_bytes = "0.11.5"
 serde_json = "1.0.55"
 rmp-serde = "1.0.0"
 rmp = "0.8.10"
