--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,7 @@ bitcoin = "0.27.1"
 bincode = "1.3.3"
 async-trait = "0.1.52"
 base64 = "0.13.0"
+itertools = "0.10.3"
+rusqlite = {version = "0.27.0", features = ["serde_json"]}
+async-recursion = "1.0.0"
+regex = "1.5.5"
