--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,6 @@ bincode = "1.3.3"
 async-trait = "0.1.52"
 base64 = "0.13.0"
 itertools = "0.10.3"
-rusqlite = {version = "0.27.0", features = ["serde_json"]}
+rusqlite = {version = "0.27.0", features = ["serde_json", "bundled"]}
 async-recursion = "1.0.0"
 regex = "1.5.5"
