--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -1,10 +1,11 @@
 name: Continuous Integration
-
 on:
   pull_request:
+    branches: [ master ]
   push:
-    branches:
-      - master
+    branches: [ master ]
+env:
+  CARGO_TERM_COLOR: always
 
 jobs:
   test-desktop:
