--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -49,7 +49,7 @@ jobs:
     - uses: actions-rs/toolchain@v1.0.7
       with:
         profile: minimal
-        toolchain: stable
+        toolchain: nightly
         override: true
         components: clippy
 
