--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -27,9 +27,16 @@ jobs:
       with:
         submodules: true
 
+    - uses: actions-rs/toolchain@v1.0.7
+      with:
+        profile: minimal
+        toolchain: nightly
+        override: true
+
     - uses: Swatinem/rust-cache@v1.3.0
       with:
         key: ${{ matrix.args }}
+
 
     - run: cargo test --workspace ${{ matrix.args }}
 
