[Plugin] Block Storage for Files
See https://github.com/canewsin/zeronet-rs/issues/10

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,9 @@ authors = ["canewsin <canews.in@gmail.com>"]
 edition = "2021"
 
 [features]
-default = ["userio"]
+default = ["userio", "blockstorage"]
 userio = []
+blockstorage = []
 
 [dependencies]
 async-recursion = "1.0.0"
