--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ serde_json = "1.0.79"
 sha1 = "0.10.1"
 sha2 = "0.10.2"
 tokio = { version = "1.17.0", features = ["full"] }
+diff = "0.1.12"
 
 zeronet_cryptography = { path = "./zeronet_cryptography" }
 zeronet_protocol = { path = "./zeronet_protocol", features = ["tor", "i2p"] }
