--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,6 @@ async-trait = "0.1.52"
 base64 = "0.13.0"
 bincode = "1.3.3"
 bitcoin = "0.27.1"
-chrono = "0.4.19"
 clap = "3.1.6"
 futures = "0.3.21"
 itertools = "0.10.3"
@@ -32,6 +31,7 @@ serde_bytes = "0.11.5"
 serde_json = "1.0.79"
 sha1 = "0.10.1"
 sha2 = "0.10.2"
+time = "0.3.9"
 tokio = { version = "1.17.0", features = ["full"] }
 diff = "0.1.12"
 
