--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,12 +3,13 @@ authors = ["canewsin <canews.in@gmail.com>"]
 edition = "2021"
 name = "zeronet"
 version = "0.1.0"
+
 [dependencies]
 async-recursion = "1.0.0"
 async-trait = "0.1.52"
 base64 = "0.13.0"
 bincode = "1.3.3"
-bitcoin = "0.27.1"
+bitcoin = "0.28.1"
 clap = "3.1.6"
 diff = "0.1.12"
 futures = "0.3.21"
@@ -26,6 +27,7 @@ sha1 = "0.10.1"
 sha2 = "0.10.2"
 time = "0.3.9"
 tor-stream = "*"
+pretty_env_logger = "*"
 
 [dependencies.rusqlite]
 features = ["serde_json", "bundled"]
