--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ sha2 = "0.10.2"
 time = "0.3.9"
 tor-stream = "*"
 pretty_env_logger = "*"
+ping = "0.4.0"
 
 [dependencies.rusqlite]
 features = ["serde_json", "bundled"]
