Moved Protocol module to seperate crate. crate name: decentnet_protocol

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,10 @@ path = "./zeronet_protocol"
 [dependencies.zerucontent]
 path = "./zerucontent"
 
+[dependencies.decentnet_protocol]
+path = "./decentnet_protocol"
+features = ["full"]
+
 [features]
 blockstorage = []
 default = ["userio", "blockstorage"]
