--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ uuid =  { version = ">= 0.8", features = ["serde", "v4"] }
 actix-files = "0.6.2"
 futures-util = "0.3.21"
 html-escape = "0.2.11"
+actix-web-actors = "4.1.0"
 
 [dependencies.rusqlite]
 features = ["serde_json", "bundled"]
