Changes: Moved find_peers fn from common mod to discovery module Moved load peers fn from common mod to io::utils  module Load Trackers from file instead of cont value Use Message and Address Types from decentnet_protocol Show loading screen and loading title for non existing sites Fix SiteData serialization Fixed saving user SiteData to users.json file Fix tracker route error while initial communication Added Error types for bencode Errors Added add_peers method for Site Added WebsocketController for WebSockets to send Events to Sites Added more websocket handlers Fixed Several Issues

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ actix-files = "0.6.2"
 futures-util = "0.3.21"
 html-escape = "0.2.11"
 actix-web-actors = "4.1.0"
+rayon = "1.5.3"
 
 [dependencies.rusqlite]
 features = ["serde_json", "bundled"]
@@ -53,7 +54,6 @@ version = "1.17.0"
 path = "./zeronet_cryptography"
 
 [dependencies.zeronet_protocol]
-features = ["tor", "i2p"]
 path = "./zeronet_protocol"
 
 [dependencies.zerucontent]
@@ -64,8 +64,8 @@ path = "./decentnet_protocol"
 features = ["full"]
 
 [features]
-blockstorage = []
 default = ["userio", "blockstorage"]
+blockstorage = []
 userio = []
 
 [profile.beta]
