--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ rayon = "1.5.3"
 mut_static = "5.0.0"
 mime = "0.3.16"
 mime_guess = "2.0.4"
+hex = "0.4.3"
 
 [dependencies.rusqlite]
 features = ["serde_json", "bundled"]
