--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["canewsin <canews.in@gmail.com>"]
 edition = "2021"
 name = "zeronet"
-version = "0.1.3"
+version = "0.1.4-beta"
 
 [dependencies]
 async-recursion = "1.0.0"
@@ -10,7 +10,7 @@ async-trait = "0.1.52"
 base64 = "0.13.0"
 bincode = "1.3.3"
 bitcoin = "0.28.1"
-clap = "3.1.6"
+clap = "4.0.19"
 diff = "0.1.12"
 futures = "0.3.21"
 itertools = "0.10.3"
