gh:: run security audit on pull request

--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -4,6 +4,11 @@ on:
     paths: 
       - '**/Cargo.toml'
       - '**/Cargo.lock'
+  pull_request:
+    paths: 
+      - '**/Cargo.toml'
+      - '**/Cargo.lock'
+
 jobs:
   security_audit:
     runs-on: ubuntu-18.04
