--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bincode = "1.3.3"
 bitcoin = "0.29.2"
 clap = "4.0.19"
 diff = "0.1.12"
+derive_more = "0.99"
 futures = "0.3.21"
 itertools = "0.10.3"
 lazy_static = "1.4.0"
