--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -30,7 +30,7 @@ jobs:
     - uses: actions-rs/toolchain@v1.0.7
       with:
         profile: minimal
-        toolchain: nightly
+        toolchain: nightly-2024-01-24
         override: true
 
     - uses: Swatinem/rust-cache@v1.3.0
@@ -56,7 +56,7 @@ jobs:
     - uses: actions-rs/toolchain@v1.0.7
       with:
         profile: minimal
-        toolchain: nightly
+        toolchain: nightly-2024-01-24
         override: true
         components: clippy
 
