--- a/.github/workflows/tools.yml
+++ b/.github/workflows/tools.yml
@@ -1,9 +1,9 @@
 name: Continuous Integration
 on:
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
   push:
-    branches: [ master ]
+    branches: [ main ]
 env:
   CARGO_TERM_COLOR: always
 
